--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
         <canvas id="id-canvas" width="400" height="300"></canvas>
         <script>
 
+            var log = console.log.bind(log)
             var imageFromPath = function(path){
                 var img = new Image()
                 img.src = path
@@ -24,7 +25,16 @@
                     image: image,
                     x:100,
                     y:100,
+                    speed:15
                 }
+                o.moveLeft = function() {
+                    o.x -= o.speed
+                }
+                o.moveRight = function() {
+                    o.x += o.speed
+                }
+
+                return o
             }
             var gameHandle = function(){
                 var g = {
@@ -36,7 +46,8 @@
                 g.canvas = canvas
                 g.context = context
                 g.drawImage = function(img){
-                    g.context.drawImage(img, img.x, img.y)
+                    log('img test:',img)
+                    g.context.drawImage(img.image, img.x, img.y)
                 }
                 window.addEventListener('keydown', function(event){
                     g.keydowns[event.key] = true
@@ -73,6 +84,7 @@
                 var game = gameHandle()
                 var paddle = Paddle()
 
+
                 game.registerAction('a', function(){
                     paddle.moveLeft()
                 })
@@ -89,7 +101,7 @@
                 game.draw = function() {
                     // draw
                     game.drawImage(paddle)
-                    game.drawImage(ball)
+                    //game.drawImage(ball) to do
                 }
             }
             __main()
