--- a/game.html
+++ b/game.html
@@ -8,72 +8,47 @@
                 border: 1px black solid;
             }
         </style>
+        <script src='utils.js'></script>
+        <script src='paddle.js'></script>
+        <script src='ball.js'></script>
+        <script src='level.js'></script>
     </head>
     <body>
         <canvas id="id-canvas" width="400" height="300"></canvas>
         <script>
-
-            var log = console.log.bind(log)
-            var imageFromPath = function(path){
-                var img = new Image()
-                img.src = path
-                return img
+            var loadLevel = function(n){
+                n = n-1
+                var level = levels[n]
+                var blocks = []
+                for(var i = 0; i < level.length; i++){
+                    var p = level[i]
+                    var b = Block(p)
+                    blocks.push(b)
+                }
+                log(blocks)
+                return blocks
             }
-            var Paddle = function(){
-                var image = imageFromPath('paddle.png')
+            var Block = function(position) {
+                var p = position
+                var image = imageFromPath('block.png')
                 var o = {
                     image: image,
-                    x:100,
-                    y:250,
-                    speed:15
+                    x: p[0],
+                    y: p[1],
+                    w: 50,
+                    h: 20,
+                    alive: true,
+                    lifes: p[2] || 1,
                 }
-                o.moveLeft = function() {
-                    o.x -= o.speed
-                }
-                o.moveRight = function() {
-                    o.x += o.speed
-                }
-                o.collide = function(ball) {
-                    if (ball.y + ball.image.height > o.y) {
-                        if (ball.x > o.x && ball.x < o.x + o.image.width) {
-                            log('相撞')
-                            return true
-                        }
+                o.kill = function() {
+                    o.lifes--
+                    if (o.lifes < 1) {
+                        o.alive = false
                     }
-                    return false
                 }
-
-                return o
-
-
-
-            }
-            var Ball = function() {
-                var image = imageFromPath('ball.png')
-                var o = {
-                    image: image,
-                    x: 100,
-                    y: 200,
-                    speedX: 10,
-                    speedY: 10,
-                    fired: false,
-                }
-                o.fire = function() {
-                    o.fired = true
-                }
-                o.move = function() {
-                    if (o.fired) {
-                        // log('move')
-                        if (o.x < 0 || o.x > 400) {
-                            o.speedX = -o.speedX
-                        }
-                        if (o.y < 0 || o.y > 300) {
-                            o.speedY = -o.speedY
-                        }
-                        // move
-                        o.x += o.speedX
-                        o.y += o.speedY
-                    }
+                o.collide = function(b) {
+                    // log('block', o.alive, b)
+                    return o.alive && (rectIntersects(o, b) || rectIntersects(b, o))
                 }
                 return o
             }
@@ -116,15 +91,16 @@
                     context.clearRect(0, 0, canvas.width, canvas.height)
                     // draw
                     g.draw()
-                }, 1000/30)
+                }, 1000/60)
                 return g
 
             }
-
             var __main = function(){
                 var game = gameHandle()
                 var paddle = Paddle()
                 var ball = Ball()
+                var blocks = []
+                blocks = loadLevel(1)
 
 
 
@@ -140,60 +116,31 @@
 
                 game.update = function() {
                     ball.move()
-                    // 判断相撞
                     if (paddle.collide(ball)) {
-                        // 这里应该调用一个 ball.反弹() 来实现
-                        ball.speedY *= -1
+                        ball.rebound()
+                    }
+                    for(var i = 0; i < blocks.length; i++){
+                        var block = blocks[i]
+                        if(block.collide(ball)){
+                            block.kill()
+                            ball.rebound()
+                        }
                     }
                 }
                 game.draw = function() {
-                    // draw
                     game.drawImage(paddle)
                     game.drawImage(ball)
+                    for(var i = 0; i < blocks.length; i++){
+                        var block = blocks[i]
+                        if(block.alive){
+                            game.drawImage(block)
+                        }
+
+                    }
                 }
             }
             __main()
-            /*var log = console.log.bind(console)
-            var x = 100
-            var y = 100
-            //var canvas = document.getElementById('id-canvas')
 
-            var img = new Image();
-            img.onload = function() {
-                context.drawImage(img, x, y)
-          }
-          img.src = 'paddle.png';
-          var leftDown = false
-          var rightDown = false
-          window.addEventListener('keydown', function(event){
-              log('before keydown')
-              log(event)
-              var k = event.key
-              if(k == 'a'){
-                  leftDown = true
-              }else if(k == 'd'){
-                  rightDown = true
-              }
-              log('after keydown')
-          })
-          window.addEventListener('keyup', function(event){
-              var k = event.key
-              if(k == 'a'){
-                  leftDown = false
-              }else if(k == 'd'){
-                  rightDown = false
-              }
-          })
-
-          setInterval(function(){
-              if(leftDown){
-                  x -= 10
-              }else if(rightDown){
-                  x += 10
-              }
-              context.clearRect(0, 0, canvas.width, canvas.height)
-              context.drawImage(img, x, y)
-          }, 1000/30)*/
         </script>
     </body>
 </html>
