--- a/game.html
+++ b/game.html
@@ -12,10 +12,13 @@
         <script src='paddle.js'></script>
         <script src='ball.js'></script>
         <script src='level.js'></script>
+        <script src='block.js'></script>
+        <script src='gameHandler.js'></script>
     </head>
     <body>
         <canvas id="id-canvas" width="400" height="300"></canvas>
         <script>
+            var blocks = []
             var loadLevel = function(n){
                 n = n-1
                 var level = levels[n]
@@ -28,78 +31,26 @@
                 log(blocks)
                 return blocks
             }
-            var Block = function(position) {
-                var p = position
-                var image = imageFromPath('block.png')
-                var o = {
-                    image: image,
-                    x: p[0],
-                    y: p[1],
-                    w: 50,
-                    h: 20,
-                    alive: true,
-                    lifes: p[2] || 1,
+            var enableDebugMode = function(enable){
+                if(!enable){
+                    return
                 }
-                o.kill = function() {
-                    o.lifes--
-                    if (o.lifes < 1) {
-                        o.alive = false
-                    }
-                }
-                o.collide = function(b) {
-                    // log('block', o.alive, b)
-                    return o.alive && (rectIntersects(o, b) || rectIntersects(b, o))
-                }
-                return o
-            }
-            var gameHandle = function(){
-                var g = {
-                    actions:[],
-                    keydowns:[],
-                }
-                var canvas = document.querySelector('#id-canvas')
-                var context = canvas.getContext('2d')
-                g.canvas = canvas
-                g.context = context
-                g.drawImage = function(img){
-                    //log('img test:',img)
-                    g.context.drawImage(img.image, img.x, img.y)
-                }
+                window.paused = false
                 window.addEventListener('keydown', function(event){
-                    g.keydowns[event.key] = true
-                })
-                window.addEventListener('keyup', function(event){
-                    g.keydowns[event.key] = false
-                })
-                g.registerAction = function(key, callback){
-                    g.actions[key] = callback
-                }
-
-                setInterval(function(){
-                    // events
-                    var actions = Object.keys(g.actions)
-                    for (var i = 0; i < actions.length; i++) {
-                        var key = actions[i]
-                        if(g.keydowns[key]) {
-                            // 如果按键被按下, 调用注册的 action
-                            g.actions[key]()
-                        }
+                    var k = event.key
+                    if(k == 'p'){
+                        window.paused = !window.paused
+                    }else if('1234567'.includes(k)){
+                        blocks = loadLevel(k)
                     }
-                    // update
-                    g.update()
-                    // clear
-                    context.clearRect(0, 0, canvas.width, canvas.height)
-                    // draw
-                    g.draw()
-                }, 1000/60)
-                return g
-
+                })
             }
+
             var __main = function(){
-                var game = gameHandle()
+                enableDebugMode(true)
+                var game = gameHandler(30)
                 var paddle = Paddle()
                 var ball = Ball()
-                var blocks = []
                 blocks = loadLevel(1)
 
 
@@ -115,6 +66,9 @@
                 })
 
                 game.update = function() {
+                    if (window.paused) {
+                        return
+                    }
                     ball.move()
                     if (paddle.collide(ball)) {
                         ball.rebound()
